--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,21 @@ xxhash-rust = { version = "0.8", features = ["xxh64"] }
 clap = { version = "4.0", features = ["derive"] }
 config = "0.14"
 
-# Development dependencies
+# Development and example dependencies
 [dev-dependencies]
 criterion = "0.5"
 tempfile = "3.0"
 approx = "0.5"
+
+[dev-dependencies.env_logger]
+version = "0.11"
+features = ["auto-color"]
+
+[[example]]
+name = "basic_demo"
+path = "examples/basic_demo.rs"
+doc-scrape-examples = true
+required-features = ["cuda"]
 
 [features]
 default = ["cuda"]
